dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(coremw, 1.0)
AC_CONFIG_MACRO_DIR([m4])

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(-Wall -Werror foreign)
AM_PROG_AR

LT_INIT

AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES(Makefile src/Makefile src/cmwpm/Makefile opensaf/Makefile opensaf/imm/Makefile test/Makefile test/testapp1/Makefile)
AC_OUTPUT

